# ROS-AGV

./: CMakeLists.txt  README.md  capmap.yaml  comandos.txt  run.sh  runmake.sh
config/: controllers.yaml
devel/: .catkin
devel/lib/capbot_description/: parser
devel/lib/capbot_setup_tf/: tf_broadcaster
devel/lib/pkgconfig/: amcl_odom.pc  capbot.pc  capbot_control.pc  capbot_description.pc  capbot_gazebo.pc  capbot_setup_tf.pc  machine.pc  marker.pc  nav_staff.pc  rplidar_ros.pc
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
launch/: capbot_controllers.launch
src/: capbot_hardware_interface_node.cpp
src/capbot_control/: CMakeLists.txt  package.xml
src/capbot_control/config/: controllers.yaml
src/capbot_control/launch/: capbot_controllers.launch  controller.launch
src/capbot_control/src/: capbot_control_node.cpp  capbot_hardware_interface_node.cpp
src/capbot_description/: CMakeLists.txt
src/capbot_description/config/: joint_names_capbot.yaml
src/capbot_description/launch/: display.launch  gazebo.launch
src/capbot_description/meshes/: L_Link.STL  R_Link.STL
src/capbot_description/urdf/: capbot.csv  capbot.urdf
src/capbot_gazebo/: CMakeLists.txt
src/capbot_gazebo/launch/: capbot.launch
src/capbot_gazebo/worlds/: capbot.world
src/capbot_navigation/: CMakeLists.txt  package.xml
src/capbot_navigation/launch/: amcl.launch  capbot_configuration.launch  move_base.launch
src/capbot_navigation/maps/: capmap.yaml
src/capbot_rplidar/: CMakeLists.txt  package.xml
src/capbot_setup_tf/: CMakeLists.txt
src/scripts/ROS_ARD/: ROS_ARD.ino
src/teleop_twist_keyboard/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
(+19 files in other folders)
